# url-shortener

./: main.py  pyproject.toml  requirements.txt  wsgi.py
app/domain/model/: link_model.py
app/domain/repository/: link_repository_interface.py
app/domain/service/: link_service.py
app/interface/persistence/: link_repository.py
app/interface/views/: link_view.py
app/registry/: container.py
app/usecase/: link_usecase.py
config/: setting.py
templates/: index.html  layout.html
